# cap-y

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.fast  Dockerfile.nvidia  Dockerfile.open  NOTICE  README.md  ROADMAP.md  build.sh  docker-compose.capx.yml  entrypoint.sh  pyproject.toml
capx/envs/simulators/: __init__.py  newton_remote.py
capx/serving/: gateway.py  launch_contact_graspnet_server.py  launch_demograsp_server.py  launch_graspanalytic_server.py  launch_newton_server.py  launch_owlvit_server.py  launch_pyroki_server.py  launch_sam2_server.py  launch_sam3_server.py  launch_servers.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.nvidia  Dockerfile.open  OPTIMISATIONS.md  build.sh  docker-bake.hcl  docker-compose.capx.yml  entrypoint.sh  gateway.yaml  patch-pyproject-x86.sh  patch-pyproject.sh
docker/aarch64/: Dockerfile  Dockerfile.nvidia  Dockerfile.open
docker/x86_64/: Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.nvidia  Dockerfile.open
docs/: development.md
scripts/: benchmark_one_button.sh  benchmark_preflight.py  build_opencv_jetson.sh  download_demograsp_ckpts.sh  install.sh  test_container_base.py  test_container_nvidia.py  test_container_open.py  test_cuda_acceleration.py
tests/: test_capx.py
web-ui/src/: App.tsx
web-ui/src/components/: CodeBlock.tsx  ServerStatus.tsx
wheels-worker/: wrangler.toml
wheels-worker/src/: index.js
